markup preparation for realization of #420 - add advanced search to js templates

--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -28,69 +28,66 @@ de:
       pending_ajax:
         searching: "Suche…"
 
-      advanced_search:
-        form_headline: "Suchergebnisse filtern/einschränken"
-        fieldset_headline_contact: "Kontaktaufnahme"
-        fieldset_headline_age: "Alter des Kindes"
-        fieldset_headline_target-group: "Zielgruppe"
-        fieldset_headline_language: "Sprache"
-        submit: "Erneut suchen"
-
-        collection_names:
-          blank: "Egal"
-          personal: "Angebote vor Ort"
-          remote: "Telefon- und Onlineberatungen"
-          babies: "Babys"
-          toddler: "Kleinkinder"
-          schoolkid: "Schulkinder"
-          adolescent: "Jugendliche"
-          young_adults: "junge Erwachsene"
-          parents: "Eltern"
-          grandparents: "Großeltern"
-          boys_only: "nur für Jungen und Männer"
-          girls_only: "nur für Mädchen und Frauen"
-          single_parents: "Alleinerziehende"
-          patchwork_families: "Patchworkfamilien"
-          rainbow_families: "Regenbogenfamilien"
-          lgbt: "LGBT"
-          deu: "Deutsch"
-          eng: "Englisch"
-          tur: "Türkisch"
-          tha: "Thai"
-          bul: "Bulgarisch"
-          ron: "Rumänisch"
-          sqi: "Albanisch"
-          ara: "Arabisch"
-          fra: "Französisch"
-          kur: "Kurdisch"
-          rus: "Russisch"
-          srp: "Serbisch"
-          amh: "Amharisch"
-          bos: "Bosnisch"
-          ita: "Italienisch"
-          hrv: "Kroatisch"
-          pol: "Polnisch"
-          por: "Portugiesisch"
-          vie: "Vietnamesisch"
-          wol: "Wolof"
-          fas: "Persisch (Farsi)"
-          ben: "Bengalisch"
-          spa: "Spanisch"
-          tam: "Tamil"
-          urd: "Urdu"
-          mul: "andere Sprachen auf Anfrage"
-          aze: "Aserbaidschanisch"
-          ell: "Griechisch"
-          hin: "Hindi"
-          mkd: "Mazedonisch"
-          rom: "Romanes"
-          hun: "Ungarisch"
-          "568": "Niederländisch"
-          "326": "Ukrainisch"
-          "639": "Dari"
-          "150": "Deutsche Gebärdensprache"
-          lav: "Lettisch"
-          lit: "Litauisch"
+      filters:
+        json:
+          age:
+            zero: "genau 0 Jahre alt"
+            one: "genau 1 Jahr alt"
+            other: "genau %{count} Jahre alt"
+          target_audience:
+            children: "für Kinder und Jugendliche"
+            parents: "für Eltern"
+            family: "für die ganze Familie"
+            acquintances: "für Bekannte und Verwandte"
+          target_gender:
+            boys_only: "nur für Jungen und Männer"
+            girls_only: "nur für Mädchen und Frauen"
+          language:
+            deu: "Deutsch"
+            eng: "Englisch"
+            tur: "Türkisch"
+            tha: "Thai"
+            bul: "Bulgarisch"
+            ron: "Rumänisch"
+            sqi: "Albanisch"
+            ara: "Arabisch"
+            fra: "Französisch"
+            kur: "Kurdisch"
+            rus: "Russisch"
+            srp: "Serbisch"
+            amh: "Amharisch"
+            bos: "Bosnisch"
+            ita: "Italienisch"
+            hrv: "Kroatisch"
+            pol: "Polnisch"
+            por: "Portugiesisch"
+            vie: "Vietnamesisch"
+            wol: "Wolof"
+            fas: "Persisch (Farsi)"
+            ben: "Bengalisch"
+            spa: "Spanisch"
+            tam: "Tamil"
+            urd: "Urdu"
+            mul: "andere Sprachen auf Anfrage"
+            aze: "Aserbaidschanisch"
+            ell: "Griechisch"
+            hin: "Hindi"
+            mkd: "Mazedonisch"
+            rom: "Romanes"
+            hun: "Ungarisch"
+            "568": "Niederländisch"
+            "326": "Ukrainisch"
+            "639": "Dari"
+            "150": "Deutsche Gebärdensprache"
+            lav: "Lettisch"
+            lit: "Litauisch"
+          encounter:
+            personal: "Angebote vor Ort"
+            hotline: "Telefon"
+            email: "E-Mail"
+            chat: "Chat"
+            forum: "Forum"
+            online-course: "Online-Kurs"
 
       map_sidebar:
         map_output_searchresults: Kartenausgabe der Suchergebnisse
