fix wording error

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -60,9 +60,9 @@ de:
         one: "Ein Angebot vor Ort"
         other: "%{count} Angebote vor Ort"
       remote_offers:
-        zero: "Keine Telefon- und Onlineberatungen"
-        one: "Eine Telefon- oder Onlineberatung"
-        other: "%{count} Telefon- und Onlineberatungen"
+        zero: "Keine Telefonberatungen und Onlineangebote"
+        one: "Eine Telefonberatung oder ein Onlineangebot"
+        other: "%{count} Telefonberatungen und Onlineangebote"
 
     categories_sidebar:
       all_categories: "Alle Kategorien"
