--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -100,6 +100,7 @@ de:
       what: "Worum geht's?"
       next_steps: "Was musst du tun?"
       who: "Wo gibt’s die Hilfe?"
+      last_updated: "Eintrag zuletzt bearbeitet am"
 
       # show partials
       opening_section:
