for #420 - add form labels, hidden search form fields, change callbacks, basic target_audience functionality

--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -39,6 +39,7 @@ de:
             parents: "für Eltern"
             family: "für die ganze Familie"
             acquintances: "für Bekannte und Verwandte"
+            pregnant_woman: "für Schwangere"
           target_gender:
             boys_only: "nur für Jungen und Männer"
             girls_only: "nur für Mädchen und Frauen"
