--- a/config/locales/models/offer/de.yml
+++ b/config/locales/models/offer/de.yml
@@ -13,7 +13,7 @@ de:
       needs_age_filters: "benötigt mindestens einen Altersfilter"
       needs_language_filters: "benötigt mindestens einen Sprachfilter"
       needs_target_audience_filters: |
-        benötigt mindestens einen Target Audience Filter"
+        benötigt mindestens einen Target Audience Filter
       needs_area_when_remote: |
         muss ausgefüllt werden, wenn Encounter nicht "personal" ist
       needs_location_when_personal: |
