Fix some typos for #415

--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -214,7 +214,7 @@ de:
           Informationen nicht mehr stimmen, dann aktualisieren wir sie. Das
           heißt, wir tauschen sie aus. Wir hoffen, dass uns auch die Anbieter
           dabei helfen.
-        question_eiqhteen: |
+        question_eighteen: |
           > Ist der Programmier-Code von clarat öffentlich zugänglich?
         answer_eighteen: |
           Der Programmier-Code von clarat ist öffentlich zugänglich. Den Link zu
@@ -237,7 +237,7 @@ de:
           auf der Suche nach Unterstützung. Aber auch für Menschen, die ihnen
           helfen wollen. Zum Beispiel Erzieher, Lehrer oder Ärzte.
         question_two: |
-          "> Welche Unterstützungsangebote finde ich bei clarat?""
+          > Welche Unterstützungsangebote finde ich bei clarat?
         answer_two_first_part: |
           Bei clarat gibt es Hilfe für Jugendliche, Kinder und Familien. Aber
           auch für Menschen, die ihnen helfen wollen. Es gibt verschiedene Arten
