--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -156,7 +156,7 @@ de:
           Unterstützungsangebote in einer Übersicht. Und zwar auf einen Blick.
           Außerdem sagen wir dir genau, was du tun musst, um die Hilfe zu
           finden. Und damit man bei clarat leicht Hilfe finden kann, sind die
-          Angebote in einer %{simple_language}. Diese %{simple_language} ist für
+          Angebote in einer %{simple_language}. Diese einfache Sprache ist für
           alle leicht verständlich. Denn bei clarat sollen auch Menschen
           Hilfe finden, die nicht so gut Deutsch können. Du kannst die
           Unterstützungsangebote auch auf Arabisch, Englisch, Französisch,
@@ -203,7 +203,7 @@ de:
           Bei clarat findest du verschiedene Unterstützungsangebote. Einige
           davon kannst du anonym nutzen. Das heißt, dass du niemandem deinen
           Namen sagen musst. Wenn du die Hilfe anonym nutzen kannst, steht das
-          bei clarat unter *Was musst du tun?*. Wenn das da nicht steht, frage
+          bei clarat unter <i>Was musst du tun?</i> Wenn das da nicht steht, frage
           am besten direkt den Anbieter, ob du die Hilfe auch anonym nutzen
           kannst.
         question_seventeen: "> Sind die Informationen bei clarat aktuell?"
@@ -282,26 +282,26 @@ de:
         question_four: "> Wie finde ich Unterstützungsangebote bei clarat?"
         answer_four_first_part: |
           Du kannst auf 2 Wegen Unterstützung finden. Wenn du genau weißt, was
-          du suchst, dann suche über das *Finde*-Feld.
+          du suchst, dann suche über das <i>Finde</i>-Feld.
         answer_four_bullet_one: |
-          Schreib in das Feld *Finde*, welche Hilfe du suchst. Zum Beispiel
-          *Nachhilfe*. Oder was dein Problem ist. Zum Beispiel
-          *Streit zu Hause*. Auch wenn du noch kein ganzes Wort eingegeben hast,
-          bekommst du schon Angebote angezeigt. Schreib in das Feld *Wo*, an
-          welchem Ort du Unterstützung suchst. Zum Beispiel *Kreuzberg Berlin*.
+          Schreib in das Feld <i>Finde</i>, welche Hilfe du suchst. Zum Beispiel
+          <i>Nachhilfe</i>. Oder was dein Problem ist. Zum Beispiel
+          <i>Streit zu Hause</i>. Auch wenn du noch kein ganzes Wort eingegeben hast,
+          bekommst du schon Angebote angezeigt. Schreib in das Feld <i>Wo</i>, an
+          welchem Ort du Unterstützung suchst. Zum Beispiel <i>Kreuzberg Berlin</i>.
         answer_four_second_part: |
           Wenn du noch nicht genau weißt, wie dein Problem heißt, dann suche
           über die Themen-Suche.
         answer_four_bullet_two: |
-          In das Feld *Wo* schreibst du zuerst, wo du Unterstützung suchst. Dann
+          In das Feld <i>Wo</i> schreibst du zuerst, wo du Unterstützung suchst. Dann
           klickst du auf die Bilder. Wähle aus zwischen den Themen Familie,
-          Gesundheit, Lernen und Gewalt. Wenn du zum Beispiel *Familie*
+          Gesundheit, Lernen und Gewalt. Wenn du zum Beispiel <i>Familie</i>
           anklickst, dann siehst du auf der linken Seite noch mehr Wörter zum
           Thema. Zum Beispiel Kinderarmut oder Familienkonflikt. Das sind auch
           Wörter, die du anklicken kannst. So kannst du herausfinden, wie man
           dein Problem nennt. Wenn dir zu diesem Thema zu viele
           Unterstützungsangebote angezeigt werden, dann kannst du außerdem
-          einen Suchbegriff eingeben. Schreib den Begriff in das Feld *Finde*.
+          einen Suchbegriff eingeben. Schreib den Begriff in das Feld <i>Finde</i>.
           So kannst du für das Thema, das du ausgesucht hast, Angebote finden.
         question_five: |
           > Was kann ich machen, wenn ich mein Problem nicht genau beschreiben
@@ -392,17 +392,17 @@ de:
         answer_ten: |
           Wenn du auf den Blitz klickst, dann siehst du ganz bestimmte Angebote.
           Diese Angebote helfen dir in einem Notfall. Also wenn du schnell Hilfe
-          brauchst. Bei Angeboten, bei denen *Tag und Nacht* steht, kannst du
+          brauchst. Bei Angeboten, bei denen <i>Tag und Nacht</i> steht, kannst du
           dich immer melden. Egal, wie spät es ist. Wenn du nicht so gerne
           rausgehen möchtest, findest du hier auch Hilfe per Telefon und über
           das Internet.
         question_eleven: "> Wie finde ich Unterstützungsangebote in meiner Nähe?"
         answer_eleven: |
-          Schreib in das Feld *Wo*, an welchem Ort du Unterstützung suchst. Zum
-          Beispiel *Berlin* oder *10961 Berlin* oder *Kreuzberg Berlin* oder
-          *Musterstraße Berlin*. Schreib in das Feld *Finde*, welche Hilfe du
-          suchst. Oder was dein Problem ist. Zum Beispiel *Drogen* oder
-          *arbeitslos*. Dann klick einfach auf die Lupe und finde Unterstützung!
+          Schreib in das Feld <i>Wo</i>, an welchem Ort du Unterstützung suchst. Zum
+          Beispiel <i>Berlin</i> oder <i>10961 Berlin</i> oder <i>Kreuzberg Berlin</i> oder
+          <i>Musterstraße Berlin</i>. Schreib in das Feld <i>Finde</i>, welche Hilfe du
+          suchst. Oder was dein Problem ist. Zum Beispiel <i>Drogen</i> oder
+          <i>arbeitslos</i>. Dann klick einfach auf die Lupe und finde Unterstützung!
         question_twelve: |
           > Wieso finde ich keine Unterstützungsangebote in meiner Nähe?
         answer_twelve_first_part: |
@@ -410,14 +410,14 @@ de:
           Angebote gesammelt haben. Hier einige Tipps, damit du doch Hilfe
           findest.
         answer_twelve_bullet_one: |
-          Wenn du in Berlin wohnst: Du kannst versuchen im Feld *Wo* einen
+          Wenn du in Berlin wohnst: Du kannst versuchen im Feld <i>Wo</i> einen
           Stadtteil in deiner Nähe einzugeben. Wenn du auch hier nichts findest,
-          gib *Berlin* ein.
+          gib <i>Berlin</i> ein.
         answer_twelve_bullet_two: |
-          Wenn du auf dem Land wohnst: Du kannst versuchen im Feld *Wo* eine
+          Wenn du auf dem Land wohnst: Du kannst versuchen im Feld <i>Wo</i> eine
           Stadt in deiner Nähe einzugeben.
         answer_twelve_second_part: |
-          Wenn du immer noch nichts findest, versuche es im Feld *Finde* mit
+          Wenn du immer noch nichts findest, versuche es im Feld <i>Finde</i> mit
           einem anderen Suchwort.
         answer_twelve_bullet_three: |
           Wenn dir kein anderes Suchwort einfällt, versuche über die Bilder zu
@@ -442,17 +442,17 @@ de:
           gesammelt. Es kann auch sein, dass wir für dein Problem leider keine
           passenden Angebote bei clarat haben. Damit wir das
           bald ändern können, ist deine Rückmeldung für uns sehr wichtig. Gib
-          uns bitte per E-Mail an post@clarat.org Bescheid, wenn du nicht
+          uns bitte per E-Mail an %{mailto} Bescheid, wenn du nicht
           findest, was du suchst.
           Hier einige Tipps, die dir bei der Suche helfen.
         answer_fourteen_bullet_one: |
           Probiere es mit einem anderen Suchbegriff. Wenn das nicht
           funktioniert, dann nutze die Suche über die Themen.
         answer_fourteen_bullet_two: |
-          Wenn du in Berlin wohnst: Probiere es mal, im Feld *Wo* einen
-          Stadtteil in deiner Nähe oder nur *Berlin* einzugeben.
+          Wenn du in Berlin wohnst: Probiere es mal, im Feld <i>Wo</i> einen
+          Stadtteil in deiner Nähe oder nur <i>Berlin</i> einzugeben.
         answer_fourteen_bullet_three: |
-          Wenn du auf dem Land wohnst: Dann probiere im Feld *Wo* eine Stadt bei
+          Wenn du auf dem Land wohnst: Dann probiere im Feld <i>Wo</i> eine Stadt bei
           dir in der Nähe einzugeben.
         question_fifteen: |
           > Was kann ich machen, wenn ich nicht weiß, ob das Angebot das
@@ -463,7 +463,7 @@ de:
           probiere es mit einem anderen Angebot. Wenn du dir noch nicht sicher
           bist, frage am besten beim Anbieter nach. Oft kann man anrufen oder
           eine E-Mail schreiben. Telefonnummern und E-Mail-Adressen findest du
-          bei clarat. Die stehen unter *Wo kannst du dich melden?*.
+          bei clarat. Die stehen unter <i>Wo kannst du dich melden?</i>.
         question_sixteen: |
           > Wie finde ich Angebote, wenn ich nicht für mich selbst Hilfe suche,
           sondern für jemand anderen?"
@@ -476,7 +476,7 @@ de:
           sprechen immer zuerst die Person an, die bei diesem Angebot Hilfe
           bekommt. Stell dir vor, du suchst Hausaufgabenhilfe für deine Tochter.
           Du bist also richtig, wenn ein Angebot zum Beispiel mit der Frage
-          beginnt *Brauchst du Hilfe bei den Hausaufgaben?*. Hier wird deine
+          beginnt <i>Brauchst du Hilfe bei den Hausaufgaben?</i>. Hier wird deine
           Tochter angesprochen. Sie braucht Hilfe bei den Hausaufgaben. Wenn du
           denkst, dass das Angebot für deine Tochter passt, kannst du dich hier
           auch melden. Oder deiner Tochter sagen, dass sie hier Hilfe bekommt
@@ -502,8 +502,8 @@ de:
           erkennst du bei clarat daran, dass sie unterstrichen sind. Wenn du mit
           der Maus über diese Wörter fährst, siehst du die Erklärungen.
         question_three: |
-          > Warum schreibt clarat immer nur zum Beispiel *Schüler* und nicht
-          *Schüler und Schülerinnen*?
+          > Warum schreibt clarat immer nur zum Beispiel <i>Schüler</i> und nicht
+          <i>Schüler und Schülerinnen</i>?
         answer_three: |
           Bei clarat nutzen wir eine einfache Sprache. Das bedeutet auch, dass
           wir kurze Sätze verwenden. Deswegen sagen wir nicht jedesmal Schüler
@@ -557,8 +557,8 @@ de:
           schlägt dir dann noch mehr Themen vor, die du anklicken kannst.
           Außerdem gibt es das Thema Notfall. Hier findest du Hilfe bei sehr
           dringenden Problemen.
-          Bei der Suche über das Feld *Finde* musst du das hier beachten:
-          Du kannst auch ein Suchwort im Feld *Finde* eingeben. Pass auf, du
+          Bei der Suche über das Feld <i>Finde</i> musst du das hier beachten:
+          Du kannst auch ein Suchwort im Feld <i>Finde</i> eingeben. Pass auf, du
           musst hier deutsche Wörter eingeben. Sonst funktioniert die Suche
           nicht.
         question_nine: "> Was kann ich mit dem Google-Translator machen?"
@@ -609,19 +609,19 @@ de:
           Türkisch.
         question_three: "> Wie finde ich meine Angebote bei clarat?"
         answer_three: |
-          Du kannst in dem Feld *Finde* den Namen deiner Organisation eintragen.
-          Und in dem Feld *Wo* den Standort deiner Organisation. Zum Beispiel
-          *Mustermannstraße 14 Berlin*. Dann bekommst du die Angebote für
+          Du kannst in dem Feld <i>Finde</i> den Namen deiner Organisation eintragen.
+          Und in dem Feld <i>Wo</i> den Standort deiner Organisation. Zum Beispiel
+          <i>Mustermannstraße 14 Berlin</i>. Dann bekommst du die Angebote für
           diesen Standort in einer Übersicht angezeigt. Falls deine
-          Organisation mehrere Standorte in Berlin hat, gib in dem Feld *Wo*
-          nur *Berlin* ein. Momentan haben wir viele Angebote für Berlin
+          Organisation mehrere Standorte in Berlin hat, gib in dem Feld <i>Wo</i>
+          nur <i>Berlin</i> ein. Momentan haben wir viele Angebote für Berlin
           gesammelt.
         question_four: |
           > Wie kann ich mir meine Angebote in einer Übersicht anzeigen lassen?
         answer_four: |
-          Du kannst in dem Feld *Finde* den Namen deiner Organisation eintragen.
-          Und dann in dem Feld *Wo* den Standort deiner Organisation. Zum
-          Beispiel *Mustermannstraße Berlin* oder *Berlin*. Dann bekommst du
+          Du kannst in dem Feld <i>Finde</i> den Namen deiner Organisation eintragen.
+          Und dann in dem Feld <i>Wo</i> den Standort deiner Organisation. Zum
+          Beispiel <i>Mustermannstraße Berlin</i> oder <i>Berlin</i>. Dann bekommst du
           deine Angebote in einer Übersicht angezeigt.
         question_five: |
           > Warum sind die Angebote bei clarat anders beschrieben als auf
@@ -671,9 +671,7 @@ de:
         answer_eight_bullet_two: |
           Oder daran, dass deine Angebote inhaltlich nicht zu clarat passen.
           Bei clarat findet man nur Angebote zu ganz bestimmten Themen. Welche
-          das sind, kannst du hier [interner Link zu der Frage: Welche
-          Unterstützungsangebote für Kinder, Jugendliche und Familien finde ich
-          grundsätzlich bei clarat?] nachlesen. Wenn wir deine Angebote bei
+          das sind, kannst du %{what_offers} nachlesen. Wenn wir deine Angebote bei
           clarat aufnehmen sollen, melde dich bei uns. Am besten schreibe uns
           eine E-Mail an %{mailto} oder ruf an unter +49 (0)30 55 57 96 00.
     privacy:
