final FAQ-fix 2

--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -128,7 +128,7 @@ de:
           du wohnst. Das sind meistens Angebote, die du per Telefon oder im
           Internet nutzen kannst. Das heißt, per E-Mail, im Chat oder im Forum.
           Viele andere Angebote kannst du da nutzen, wo du wohnst. Wir haben
-          bisher viele Angebote für Berlin und gesammelt. Und wir sammeln
+          bisher viele Angebote für Berlin gesammelt. Und wir sammeln
           weiter.
         question_six: "> Wer finanziert clarat?"
         answer_six: |
