changed locales and wording

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -15,7 +15,7 @@ de:
     autocomplete_footer: Alle %{results} Suchergebnisse für '%{query}'
     map_info_window_multiple:
       title: 'Mehrere Angebote'
-      text: 'Es wurden mehrere Ergebnisse für diesen Marker gefunden.'
+      text: 'Es wurden mehrere Ergebnisse an dieser Adresse gefunden.'
       anchor: 'Alle ansehen >>'
     cookie_warning_html: |
       Cookies helfen uns beim Bereitstellen dieser Website. Durch das Nutzen der
@@ -51,7 +51,7 @@ de:
 
     search_results:
       more: "Weitere Angebote"
-      bridge: "für"
+      bridge: "für den Suchbegriff"
       enclosing: "gefunden"
       faq_text: "Häufige Fragen und Antworten zur Suche findest du "
       faq_anchor: "hier"
@@ -59,7 +59,7 @@ de:
         enlarge_map: "Karte vergrößern"
         headline_small_map: "Angebote vor Ort auf der Karte"
       personal_offers:
-        zero: "Leider keine Angebote"
+        zero: "Leider keine Angebote vor Ort"
         one: "Ein Angebot vor Ort"
         other: "%{count} Angebote vor Ort"
       remote_offers:
