Anbindung an Algolia teilweise hergestellt (siehe Description)
TODOs:
- Age ist angebunden, scheint sich aber noch mit der from-to Logik zu
beißen
- encounter müssen noch überarbeitet werden

--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -85,11 +85,11 @@ de:
           contact_type:
             personal: "vor Ort"
             remote: "virtuell"
-            # hotline: "Telefon"
-            # email: "E-Mail"
-            # chat: "Chat"
-            # forum: "Forum"
-            # online-course: "Online-Kurs"
+            hotline: "Telefon"
+            email: "E-Mail"
+            chat: "Chat"
+            forum: "Forum"
+            online-course: "Online-Kurs"
 
       map_sidebar:
         map_output_searchresults: Kartenausgabe der Suchergebnisse
