changed locale entries

--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -37,8 +37,8 @@ de:
           target_audience:
             children: "für Kinder und Jugendliche"
             parents: "für Eltern"
-            family: "für Familien"
-            acquintances: "für Bekannte und Verwandte"
+            nuclear_family: "für Familien"
+            aquintances: "für Bekannte und Verwandte"
             pregnant_woman: "für Schwangere"
           exclusive_gender:
             boys_only: "nur für Jungen und Männer"
